# ROW-07

./: .gitignore  CMakeLists.txt  README.md  local.properties  settings.gradle.kts
app/: README.md  build.gradle.kts  local.properties  settings.gradle.kts
app/app/: build.gradle.kts
app/app/src/main/: AndroidManifest.xml
app/app/src/main/res/drawable/: gradient_background.xml  (+1 more)
app/docs/: App.md
app/gradle/wrapper/: gradle-wrapper.properties
app/src/main/: AndroidManifest.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/mqtt/: data_pub.cpp
docs/: index.md
docs/app/: infoScreen.md  mainScreen.md  mqttApp.md  splashScreen.md  video_feed.md
docs/pi/: MQTT in pi.md  computervision.md  cupdispenser.md  streaming.md  waterpump.md  wheels.md
gradle/wrapper/: gradle-wrapper.properties
pi/src/: main.cpp
pi/src/cupDispenser/: cupDispenser.cpp  cupDispenser.h
pi/src/mqtt/: pub.cpp  sub.cpp  sub.h
pi/src/servo/: servo.cpp  servo.h
pi/src/streaming/: camera.html  streaming.py
pi/src/ultrasound/: ultrasound.cpp
pi/src/waterpump/: waterpump.cpp  waterpump.h
pi/src/wheelEncoder/: wheelEncoder.cpp  wheels.cpp  wheels.h
src/: main.cpp
src/cupDispenser/: cupDispenser.h
src/motorController/: wheelEncoder.cpp  wheels.cpp  wheels.h
src/mqtt/: data_pub.cpp  pub.cpp  sub.cpp  sub.h
src/servo/: servo.cpp  servo.h
src/streaming/: streaming.py
src/ultrasound/: ultrasound.cpp
src/waterpump/: waterpump.cpp  waterpump.h
ultra-sonic/: testsrf.cpp
(+18 files in other folders)
